--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>About me</title>
 
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -347,15 +347,13 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">About me</h1>
 
 </div>
 
 
-<div id="this-is-yis-website" class="section level1">
-<h1>This is Yi’s website</h1>
-<p>Hello everyone!</p>
-<p><img src="images/IMG_4220.JPG" style="width:35%"></p>
+<div id="this-is-a-page-for-my-resume" class="section level1">
+<h1>This is a page for my resume</h1>
 </div>
 
 
