--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -327,13 +327,13 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="mailto:&lt;ys3924@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/YiSu3924/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -354,8 +354,13 @@ div.tocify {
 
 <div id="this-is-yis-website" class="section level1">
 <h1>This is Yi’s website</h1>
-<p>Hello everyone!</p>
+<p>Hello everyone! I am Yi Su, a graduate student in Biostatistics.
+Welcome to my page!</p>
 <p><img src="images/IMG_4220.JPG" style="width:35%"></p>
+</div>
+<div id="link-to-my-resume" class="section level1">
+<h1>Link to my resume</h1>
+<p>you can click <a href="About.html">here</a> to view my resume.</p>
 </div>
 
 
