Fix the plot nevigation bar

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="About.html">About</a>
 </li>
 <li>
   <a href="dashboard.html">Dashboard</a>
@@ -361,9 +361,11 @@ div.tocify {
 Welcome to my page!</p>
 <p><img src="images/IMG_4220.JPG" style="width:35%"></p>
 </div>
-<div id="link-to-my-resume" class="section level1">
-<h1>Link to my resume</h1>
+<div id="helpful-links" class="section level1">
+<h1>Helpful links</h1>
 <p>you can click <a href="About.html">here</a> to view my resume.</p>
+<p>you can click <a href="dashboard.html">here</a> to view my dashboard
+for problem 2.</p>
 </div>
 
 
