add more introduction to landing page

--- a/index.html
+++ b/index.html
@@ -355,14 +355,18 @@ div.tocify {
 </div>
 
 
-<div id="this-is-yis-website" class="section level1">
-<h1>This is Yi’s website</h1>
-<p>Hello everyone! I am Yi Su, a graduate student in Biostatistics.
+<div id="this-is-yis-website" class="section level2">
+<h2>This is Yi’s website</h2>
+<p>Hello everyone! I am Yi Su, a graduate student in Biostatistics with
+a Bachelor’s degree in Statistics from the University of Washington,
+Seattle. I am passionate about data and health research. Outside of
+school, I love traveling to new places, reading, and hiking. I am a cat
+lover and enjoy spending time with these amazing, playful companions.
 Welcome to my page!</p>
 <p><img src="images/IMG_4220.JPG" style="width:35%"></p>
 </div>
-<div id="helpful-links" class="section level1">
-<h1>Helpful links</h1>
+<div id="helpful-links" class="section level2">
+<h2>Helpful links</h2>
 <p>you can click <a href="About.html">here</a> to view my resume.</p>
 <p>you can click <a href="dashboard.html">here</a> to view my dashboard
 for problem 2.</p>
